--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
-language: generic
+language: python
+python:
+  - "3.5"
+cache: pip
+install:
+  # Install any dependencies required for building your site here.
+  # `awscli` is required for invalidation of CloudFront distributions.
+  - pip install awscli
+script:
+  # Build your site (e.g., HTML, CSS, JS) here.
+  - make build
 deploy:
-  # Control deployment by setting a value for `on`. Setting the `branch`
-  # option to `master` means Travis will only attempt a deployment on
-  # builds of your repo's master branch (e.g., after you merge a PR).
-  on:
-    branch: master
-    provider: s3
-    # You can refer to environment variables from Travis repo settings!
-    access_key_id: $AWS_ACCESS_KEY_ID
-    secret_access_key: $AWS_SECRET_ACCESS_KEY
-    # Name of the S3 bucket to which your site should be uploaded.
-    bucket: "jesseclark.io"
-    region: "us-east-1"
+# Control deployment by setting a value for `on`. Setting the `branch`
+# option to `master` means Travis will only attempt a deployment on
+# builds of your repo's master branch (e.g., after you merge a PR).
+on:
+  branch: master
+  provider: s3
+  # You can refer to environment variables from Travis repo settings!
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
+  # Name of the S3 bucket to which your site should be uploaded.
+  bucket: "jesseclark.io"
+  region: "us-east-1"
