--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,3 @@
-language: python
-python:
-  - "3.5"
-cache: pip
-install:
-  # Install any dependencies required for building your site here.
-  # `awscli` is required for invalidation of CloudFront distributions.
-  - pip install awscli
-script:
-  # Build your site (e.g., HTML, CSS, JS) here.
-  - make build
 deploy:
 # Control deployment by setting a value for `on`. Setting the `branch`
 # option to `master` means Travis will only attempt a deployment on
@@ -22,3 +11,4 @@ on:
   # Name of the S3 bucket to which your site should be uploaded.
   bucket: "jesseclark.io"
   region: "us-east-1"
+  skip_cleanup: true
