--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: node_js
 deploy:
 # Control deployment by setting a value for `on`. Setting the `branch`
 # option to `master` means Travis will only attempt a deployment on
