--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 before_install:
   - rm -f .npmrc
   - npm cache clean --force
-  - npm install -g npm@latest
+  - npm install -g npm@8.19.4
   - npm install -g serverless
 
 install:
