--- a/.travis.yml
+++ b/.travis.yml
@@ -2,72 +2,39 @@ language: node_js
 node_js:
   - "18"
 
-# Specify Ubuntu 20.04 (Focal Fossa)
 dist: focal
 
-# Allow both main and master branches
 branches:
   only:
     - master
     - main
 
 before_install:
-  # Update system packages
-  - sudo apt-get update
-  - sudo apt-get install -y jq
-  # Remove any existing npm config
-  - rm -f .npmrc
-  - rm -rf ~/.npm
-  # Clear npm cache
-  - npm cache clean --force
-  # Install AWS CLI for S3/CloudFront
+  # Install required tools
+  - sudo apt-get update && sudo apt-get install -y jq
   - pip install --user awscli
   - npm install -g npm@9.8.1
-  # Configure AWS credentials
+
+  # Configure AWS
   - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
   - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
   - aws configure set region $AWS_DEFAULT_REGION
-  # Verify AWS credentials
-  - aws sts get-caller-identity
-  # Verify AWS credentials and S3 access
-  - echo "Testing initial AWS credentials..."
-  - aws sts get-caller-identity
-  - echo "Testing S3 access..."
-  - aws s3 ls s3://jesseclark.io || echo "Failed to list bucket"
-  
-  # Assume role with debug info
-  - echo "Attempting to assume role..."
+
+  # Assume role
   - |
     CREDENTIALS=$(aws sts assume-role \
       --role-arn $AWS_ROLE_ARN \
       --role-session-name "TravisDeployment" \
       --duration-seconds 900)
-  - echo "Role assumption successful, setting new credentials..."
   - export AWS_ACCESS_KEY_ID=$(echo $CREDENTIALS | jq -r .Credentials.AccessKeyId)
   - export AWS_SECRET_ACCESS_KEY=$(echo $CREDENTIALS | jq -r .Credentials.SecretAccessKey)
   - export AWS_SESSION_TOKEN=$(echo $CREDENTIALS | jq -r .Credentials.SessionToken)
-  
-  # Verify assumed role credentials
-  - echo "Testing assumed role credentials..."
-  - aws sts get-caller-identity
-  - echo "Testing S3 access with assumed role..."
-  - aws s3 ls s3://jesseclark.io || echo "Failed to list bucket with assumed role"
 
 install:
   - npm ci
 
 script:
-  - echo "Starting static site deployment..."
-  # Verify environment variables (will show if they exist, not their values)
-  - |
-    echo "Checking environment variables..."
-    for var in AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY AWS_DEFAULT_REGION CLOUDFRONT_DISTRIBUTION_ID GITHUB_TOKEN; do
-      if [ -z "${!var}" ]; then
-        echo "❌ $var is not set"
-      else
-        echo "✅ $var is set"
-      fi
-    done
+  - echo "Starting deployment..."
 
 deploy:
   provider: s3
@@ -80,7 +47,6 @@ deploy:
   skip_cleanup: true
   local_dir: .
   acl: public_read
-  verbose: true
   detect_encoding: true
   cache_control: "max-age=31536000"
   on:
@@ -88,15 +54,7 @@ deploy:
     condition: $TRAVIS_BRANCH =~ ^(master|main)$ && $TRAVIS_PULL_REQUEST = false
 
 after_deploy:
-  # Invalidate CloudFront cache
   - aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_DISTRIBUTION_ID --paths "/*"
-  - echo "CloudFront cache invalidated"
-
-after_success:
-  - echo "Build completed successfully"
-
-after_failure:
-  - echo "Build failed"
 
 notifications:
   email:
