--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,87 @@
+# Environment variables and secrets
+.env
+.env.*
+*.pem
+aws.json
+credentials.json
+**/credentials/*
+
+# AWS specific
+.aws/
+aws-config.json
+aws.config.js
+.elasticbeanstalk/
+
+# Generated files
+assets/css/*
+!assets/css/.gitkeep
+dist/
+build/
+.cache/
+
 # Dependencies
 node_modules/
+bower_components/
+vendor/
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+.project
+.settings/
+*.swp
+*.swo
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
+.directory
+Desktop.ini
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+logs/
+debug.log
 
-# Build output
-dist/
-build/
+# Cache directories
+.sass-cache/
+.npm/
+.eslintcache
+*.css.map
+*.js.map
 
-# IDE and editor files
-.idea/
-.vscode/
-*.swp
-*.swo
-.DS_Store 
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+temp/
 
-# Environment variables
-.env 
+# Test coverage
+coverage/
+.nyc_output/
+
+# Build tools
+.grunt/
+.webpack/
+.next/
+out/
+
+# Serverless
+.serverless/
+.dynamodb/
+
+# Local development
+*.local
+local.*
+dev.db
+
+# Backup files
+*.bak
+*.backup
+*~ 
