--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,11 @@ deploy:
       --exclude ".env" \
       --exclude ".travis.yml" \
       --exclude "test-deploy.sh" \
-      && aws s3 cp assets/css/style.css s3://jesseclark.io/assets/css/style.css \
-         --content-type "text/css" \
-         --cache-control "max-age=3600" \
-         --acl public-read
-  skip_cleanup: true
+    && aws s3 cp assets/css/style.css s3://jesseclark.io/assets/css/style.css \
+      --content-type "text/css" \
+      --cache-control "max-age=3600" \
+      --acl public-read
+  cleanup: false
   on:
     all_branches: true
     condition: $TRAVIS_BRANCH =~ ^(master|main)$ && $TRAVIS_PULL_REQUEST = false
